--- a/package.json
+++ b/package.json
@@ -33,15 +33,19 @@
     "minify": true
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/openai": "^1.3.22",
     "@aws-sdk/client-translate": "^3.839.0",
     "@stricli/core": "^1.1.2",
+    "ai": "^4.3.16",
     "chalk": "^5.4.1",
     "dotenv": "^17.0.0",
     "flat": "^6.0.1",
     "lodash.chunk": "^4.2.0",
     "ora": "^8.2.0",
     "smol-toml": "^1.4.0",
-    "yaml": "^2.8.0"
+    "yaml": "^2.8.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/lodash.chunk": "^4.2.9",
